<resources>
    <string name="app_name">Chilaquil Express</string>
    <string name="botonInicio">Tomar Orden</string>
    <string name="descripcionInicio">¡Chilaquiles al gusto!</string>
    <string name="tipoOrden">Tipo de orden</string>
    <string name="btnMesa">Por mesa</string>
    <string name="btnPersona">Por persona</string>
    <string name="btnEnviarChilaquil">Enviar Pedido</string>
    <string name="cebolla">Cebolla</string>
    <string name="cilantro">Cilantro</string>
    <string name="queso_fresco">Queso fresco</string>
    <string name="crema">Crema</string>
    <string name="elige_tus_toppings">Elige tus toppings:</string>
    <string name="cochinita"><![CDATA[<b>Cochinita</b> (+ $15.00)]]></string>
    <string name="chilorio"><![CDATA[<b>Chilorio</b> (+ $15.00)]]></string>
    <string name="chicharron"><![CDATA[<b>Chicharrón</b> (+ $20.00)]]></string>
    <string name="adobada"><![CDATA[<b>Abodaba</b> (+ $15.00)]]></string>
    <string name="frijoles"><![CDATA[<b>Frijoles</b> (+ $10.00)]]></string>
    <string name="chorizo"><![CDATA[<b>Chorizo</b> (+ $15.00)]]></string>
    <string name="pollo"><![CDATA[<b>Pollo</b> (+ $15.00)]]></string>
    <string name="elige_tu_prote_na">Elige tu proteína:</string>
    <string name="salsa_roja">Salsa Roja</string>
    <string name="salsa_verde">Salsa Verde</string>
    <string name="elige_tu_salsa">Elige tu salsa:</string>
    <string name="personaliza_tus_chilaquiles">Personaliza tus chilaquiles</string>
    <string name="agregar">Agregar</string>
    <string name="bebidas">BEBIDAS</string>
    <string name="chilaquiles">CHILAQUILES</string>
    <string name="proteinas">PROTEÍNAS</string>
    <string name="toppings">TOPPINGS</string>

</resources>