<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white"
    tools:context=".MenuChilaquil">

    <TextView
        android:id="@+id/tipoChilaquil"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Tipo Chilaquil"
        android:textColor="@color/black"
        android:textSize="25sp"
        android:fontFamily="monospace"
        android:textStyle="bold"
        android:paddingTop="25dp"
        />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/rojo"
            android:padding="10dp"
            android:textSize="20sp"
            android:textColor="@color/white"
            android:textAllCaps="true"
            android:fontFamily="monospace"
            android:textStyle="bold"
            android:text="@string/proteinas"
            android:textAlignment="center"
            />

        <CheckBox
            android:id="@+id/cbFrijoles"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:text="@string/frijoles"
            />

        <CheckBox
            android:id="@+id/cbPollo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:text="@string/pollo"/>

        <CheckBox
            android:id="@+id/cbAdobada"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:text="@string/adobada"/>

        <CheckBox
            android:id="@+id/cbChorizo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:text="@string/chorizo"/>

        <CheckBox
            android:id="@+id/cbChilorio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:text="@string/chilorio"/>

        <CheckBox
            android:id="@+id/cbCochinita"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:text="@string/cochinita"/>

        <CheckBox
            android:id="@+id/cbChicharron"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:text="@string/chicharron"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/rojo"
            android:padding="10dp"
            android:textSize="20sp"
            android:textColor="@color/white"
            android:textAllCaps="true"
            android:fontFamily="monospace"
            android:textStyle="bold"
            android:text="@string/toppings"
            android:textAlignment="center"
            />

        <CheckBox
            android:id="@+id/cbCrema"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:textStyle="bold"
            android:text="@string/crema"/>

        <CheckBox
            android:id="@+id/cbQueso"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:textStyle="bold"
            android:text="@string/queso_fresco"/>

        <CheckBox
            android:id="@+id/cbCilantro"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:textStyle="bold"
            android:text="@string/cilantro"/>

        <CheckBox
            android:id="@+id/cbCebolla"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:textStyle="bold"
            android:text="@string/cebolla"/>

    <Button
        android:id="@+id/btnConfirmar"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:layout_gravity="center"
        android:layout_marginTop="50dp"
        android:backgroundTint="@color/rojo"
        android:text="@string/agregar"
        android:fontFamily="monospace"
        android:textStyle="bold"
        android:textAllCaps="true"
        android:textSize="20sp" />

</LinearLayout>
