<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white"
    tools:context=".TipoOrdenActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/rojo"
        android:padding="16dp"
        android:textSize="35sp"
        android:textColor="@color/white"
        android:textAllCaps="true"
        android:fontFamily="monospace"
        android:textStyle="bold"
        android:text="@string/tipoOrden"
        android:textAlignment="center"
        />

    <Button
        android:id="@+id/btn_por_mesa"
        android:layout_width="250dp"
        android:layout_gravity="center"
        android:layout_height="wrap_content"
        android:text="@string/btnMesa"
        android:textAllCaps="true"
        android:fontFamily="monospace"
        android:textStyle="bold"
        android:backgroundTint="@color/rojo"
        android:layout_marginTop="250dp"
        android:padding="17dp"
        android:textSize="25sp"/>

    <Button
        android:id="@+id/btn_por_persona"
        android:layout_width="250dp"
        android:layout_gravity="center"
        android:layout_height="wrap_content"
        android:text="@string/btnPersona"
        android:textAllCaps="true"
        android:fontFamily="monospace"
        android:textStyle="bold"
        android:backgroundTint="@color/rojo"
        android:layout_marginTop="40dp"
        android:padding="17dp"
        android:textSize="25sp"/>

</LinearLayout>